# macroswap

./: .env.example  .gitignore  Anchor.toml  package.json  tsconfig.json
app/: .env  .env.example  README.md  next.config.js  package.json
app/pages/: _app.tsx  _document.tsx  index.tsx
app/src/components/ConnectButton/: index.tsx
app/src/components/EventListener/: index.tsx
app/src/components/Footer/: Footer.module.css  index.tsx
app/src/components/Notify/: index.tsx
app/src/components/SwapButton/: SwapButton.module.css  index.tsx
app/src/components/WalletConnectionProvider/: index.tsx
app/src/components/layout/: Layout.tsx  MainNavigation.module.css  MainNavigation.tsx
app/src/components/popups/: AlertModal.tsx  Popup.module.css  SuccessModal.tsx
app/src/components/swap/: EthDropdown.tsx  RateBox.tsx  SolDropdown.tsx  SwapInterface.module.css  SwapInterface.tsx  TokenDropdown.tsx
app/src/connectors/: index.ts  network-config.ts
app/src/contracts/: index.ts
app/src/contracts/abis/: Dex.json  ERC20.json
app/src/hooks/: index.ts  useAsync.ts  useDidUpdateEffect.ts  usePartialRecord.ts  usePrevious.ts
app/src/interactions/: common.ts  connectwallet.ts  macro.ts  macroswap.ts  sol.ts  swap.ts
app/src/state/: index.ts
app/src/utils/: bigNumber.ts  hexNumber.ts  index.ts
app/src/web3/: index.ts
app/styles/: Home.module.css  globals.css
migrations/: script.ts
programs/macroswap/: Cargo.toml
programs/macroswap/src/: account.rs  context.rs  error.rs  event.rs  lib.rs
tests/: macroswap.ts  utils.ts
utils/: account.ts
(+12 files in other folders)
